--- a/templates/author/admin.html
+++ b/templates/author/admin.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %} Admin {% endblock %}
 
-{% block title %} Read Posts {% endblock %}
+
 
 {% block content %} 
 
-	
+
 	<h2> Articles </h2> <hr>
 
 	{% for post in posts %}
@@ -29,5 +30,7 @@
 		<hr>
 
 	{% endfor %}
+
+
 
 {% endblock %}
