--- a/templates/blog/single_post.html
+++ b/templates/blog/single_post.html
@@ -7,17 +7,26 @@
 	
 	<h2> {{ post.title }} </h2> <hr>
 
-	
+	{% if action is admin %}
+		<a href="#"> EDIT </a>  &nbsp; <a href="#"> Delete </a> 
+	{% endif %}
 
-	<a href="#"> EDIT </a>  &nbsp; <a href="#"> Delete </a> 
 
 	<p> {{ post.body }}  </p>
 
+	<strong> Posted by: Harinder Singh in Python on 
 
-	<strong> Posted by: Harinder Singh in Python </strong> 
+
+		{% if post.publish_date %}
+
+			{{ post.publish_date }}
+
+		{% endif %}
+
+
+	</strong> 
 
 	<hr>
-
 
 
 {% endblock %}
