--- a/templates/author/admin.html
+++ b/templates/author/admin.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 {% block title %} Admin {% endblock %}
 
@@ -7,27 +7,29 @@
 {% block content %} 
 
 
-	<h2> Articles </h2> <hr>
+	{% for post in posts.items %}
 
-	{% for post in posts %}
 
 		<h3> <a href="{{ url_for('article', slug = post.slug) }}"> {{ post.title }} </a> </h3> 
 
-		<p> {{ post.body }}  </p>
-
-
-		<strong> Posted by Harinder Singh in Python on 
-
-			{% if post.publish_date %}
-
-			{{ post.publish_date }} 
-
-			{% endif %}
-
-
-		</strong> 
+		<p> <a href="{{ url_for('edit', post_id = post.id) }}"> EDIT </a>  <a href="#"> DELETE </a> </p>
 
 		<hr>
+
+	{% endfor %}
+
+
+	{% for page in posts.iter_pages() %}
+
+		{% if page %}
+
+			<a href="{{ url_for('admin', page = page )}}"> {{ page }} </a>
+
+		{% else %}
+
+			...
+
+		{% endif %}
 
 	{% endfor %}
 
