--- a/templates/author/todo.html
+++ b/templates/author/todo.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 {% block title %} Author Options {% endblock %}
 
@@ -10,9 +10,9 @@
 
 	<h2> Admin Options </h2>
 
-	<a href="#"> Create Post </a>
+	<a href="{{ url_for('post')}}"> Create Post </a>
 	<br><br>
-	<a href="#">Read Post</a>
+	<a href="{{ url_for('index') }}">Read Post</a>
 
 	
 
