--- a/templates/author/todo.html
+++ b/templates/author/todo.html
@@ -4,15 +4,13 @@
 
 {% block content %} 
 
-	
-
-
 
 	<h2> Admin Options </h2>
 
 	<a href="{{ url_for('post')}}"> Create Post </a>
 	<br><br>
-	<a href="{{ url_for('index') }}">Read Post</a>
+
+	<a href="{{ url_for('admin') }}"> Read Post</a>
 
 	
 
