--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,19 +26,20 @@
 
           {% if session['user'] %}
 
-             <a class="navbar-brand mr-4" href="{{ url_for('admin') }}">Admin</a>
+             
+          <form class="form-inline my-2 my-lg-0">
 
-             <a class="navbar-brand mr-4" href="{{ url_for('logout') }}">Logout</a>
+           
+             <a class="navbar-brand mr-3" href="{{ url_for('admin') }}">Admin</a>
+
+             <a class="navbar-brand mr-3" href="{{ url_for('logout') }}">Logout</a>
+
+          </form>
 
           {% endif %}
 
 
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-
-            <span class="navbar-toggler-icon"></span>
-
-          </button>
 
           <!-- <div class="collapse navbar-collapse" id="navbarToggle">
 
