--- a/templates/author/admin.html
+++ b/templates/author/admin.html
@@ -12,7 +12,15 @@
 
 		<h3> <a href="{{ url_for('article', slug = post.slug) }}"> {{ post.title }} </a> </h3> 
 
-		<p> <a href="{{ url_for('edit', post_id = post.id) }}"> EDIT </a>  <a href="#"> DELETE </a> </p>
+		{% if post.is_live %}
+
+			<p> <a href="{{ url_for('edit', post_id = post.id) }}"> EDIT </a> 
+
+			<a href="{{ url_for('delete', post_id = post.id) }}"> DELETE </a> </p>
+
+			
+
+		{% endif %}
 
 		<hr>
 
