New Category Field Added git status

--- a/templates/author/post.html
+++ b/templates/author/post.html
@@ -41,7 +41,13 @@
 	      <dt>{{ form.category.label }}
 	      <dd>{{ form.category }}
 
+
+	      <dt>{{ form.new_category.label }}
+	      <dd>{{ form.new_category }}
+
 	   </dl>
+
+	   <br>
 
 	   <p>
 
