--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,37 +24,27 @@
 
           <a class="navbar-brand mr-4" href="/">Flask Blog</a>
 
+
           {% if session['user'] %}
 
+            <form class="form-inline my-2 my-lg-0">
+
              
-          <form class="form-inline my-2 my-lg-0">
+               <a class="navbar-brand mr-3" href="{{ url_for('admin') }}"> {{ session['user']}} </a>
 
-           
-             <a class="navbar-brand mr-3" href="{{ url_for('admin') }}">Admin</a>
+               <a class="navbar-brand mr-3" href="{{ url_for('post') }}">Create</a>
 
-             <a class="navbar-brand mr-3" href="{{ url_for('logout') }}">Logout</a>
+               <a class="navbar-brand mr-3" href="{{ url_for('logout') }}">Logout</a>
 
-          </form>
+
+
+            </form>
+
+          {% else %}
+
+             <a class="navbar-brand mr-3" href="{{ url_for('login') }}">Admin</a>
 
           {% endif %}
-
-
-
-
-          <!-- <div class="collapse navbar-collapse" id="navbarToggle">
-
-            <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/about">About</a>
-            </div>
-
-            
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login</a>
-              <a class="nav-item nav-link" href="/register">Register</a>
-            </div>
-
-          </div> -->
 
         </div>
 
@@ -65,60 +55,42 @@
     <main role="main" class="container">
 
       <div class="row">
+
         <div class="col-md-8">
 
           {% block content %}
 
-            {% for post in posts %}
-
-                <article class="media content-section">
-
-                  <div class="media-body">
-
-                    <div class="article-metadata">
-
-                      <a class="mr-2" href="#">{{ post.author }}</a>
-
-                      <small class="text-muted">{{ post.publish_date }}</small>
-
-                    </div>
-
-                    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-
-                    <p class="article-content">{{ post.body }}</p>
-                  </div>
-
-                </article>
-
-            {% endfor %}
-
-
-
+           
           {% endblock %}
 
         </div>
+
+
+
 
         <div class="col-md-4">
 
           <div class="content-section">
 
-            <h4>More Articles</h4>
+            <h4> Categories </h4>
 
             <p class='text-muted'>
 
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+
+
+                {% for category in categories %}
+
+                    <li class="list-group-item list-group-item-light">
+                      
+                      <a href="{{ url_for('category_wise_blog', category = category.name)}}"> {{ category.name }} </a>
+
+
+                    </li>
+
+                {% endfor %}
+
+
               </ul>
 
             </p>
@@ -132,10 +104,13 @@
     </main>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
