Some Unittest Added git add -A

--- a/templates/author/admin.html
+++ b/templates/author/admin.html
@@ -5,6 +5,24 @@
 
 
 {% block content %} 
+		
+    {% with messages = get_flashed_messages() %}
+
+	  {% if messages %}
+
+	    <ul class=flashes>
+
+	    {% for message in messages %}
+
+	      <li>{{ message }}</li>
+
+	    {% endfor %}
+
+	    </ul>
+
+	  {% endif %}
+
+	{% endwith %}
 
 
 	{% for post in posts.items %}
