--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
-   <title> Flask Blog</title>
+   <title> {% block title %} Flask Blog  {% endblock %} </title>
 
 </head>
 
@@ -24,7 +24,6 @@
 
           <a class="navbar-brand mr-4" href="/">Flask Blog</a>
 
-
           {% if session['user'] %}
 
             <form class="form-inline my-2 my-lg-0">
@@ -35,8 +34,6 @@
                <a class="navbar-brand mr-3" href="{{ url_for('post') }}">Create</a>
 
                <a class="navbar-brand mr-3" href="{{ url_for('logout') }}">Logout</a>
-
-
 
             </form>
 
