Flask Blog UI Updatedgit status

--- a/templates/author/login.html
+++ b/templates/author/login.html
@@ -12,7 +12,7 @@
  	<div class="col-5">
 
  		<br>
- 		<h2> User Login</h2><br>
+ 		<h2 class="text-uppercase text-black font-weight-bold" > User Login</h2><br>
 
 		<form method="post" action="{{ url_for('login')}}">
 
