--- a/templates/author/todo.html
+++ b/templates/author/todo.html
@@ -5,7 +5,7 @@
 {% block content %} 
 
 
-	<h2> Admin Options </h2>
+	<h2 class="text-uppercase text-black font-weight-bold"> Admin Options </h2>
 
 
 	<br>
