--- a/templates/author/admin.html
+++ b/templates/author/admin.html
@@ -27,39 +27,91 @@
 
 	<br>
 
-	{% for post in posts.items %}
+	
+
+	 {% for post in posts.items %}
+
+	 	{% if post.is_live %}
+
+	 		<article class="media content-section">
+
+	          <div class="media-body">
+
+	            <div class="article-metadata">
+
+	              Posted by 
+	              <a class="mr-2" href="{{ url_for('author_wise_posts', author = post.author.name) }}">{{ post.author.name }}</a>
+	              in  {{ post.category.name }} on
+
+	              <small class="text-muted">{{ post.publish_date }}</small>
+
+	            </div>
+
+	            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+	            <p> <a href="{{ url_for('edit', post_id = post.id) }}"> EDIT </a> 
+
+				<a href="{{ url_for('delete', post_id = post.id) }}"> DELETE </a> </p>
+
+	            <p class="article-content"> {{ post.body }} </p>
+
+	          </div>
+
+	        </article>
+
+	 	{% endif  %}
+
+        
+
+    {% endfor %}
 
 
-		<h3> <a href="{{ url_for('article', slug = post.slug) }}"> {{ post.title }} </a> </h3> 
+	<!-- Pagination -->
+	<nav aria-label="Page navigation example">
 
-		{% if post.is_live %}
-
-			<p> <a href="{{ url_for('edit', post_id = post.id) }}"> EDIT </a> 
-
-			<a href="{{ url_for('delete', post_id = post.id) }}"> DELETE </a> </p>
-
-			
-
-		{% endif %}
-
-		<hr>
-
-	{% endfor %}
+	  <ul class="pagination">
 
 
-	{% for page in posts.iter_pages() %}
+	  	{% if posts.has_prev %}
 
-		{% if page %}
+	  		<a class="page-link" href="{{ url_for('admin', page = posts.prev_num )}}" aria-label="Previous">
 
-			<a href="{{ url_for('admin', page = page )}}"> {{ page }} </a>
+		        <span aria-hidden="true">&laquo;</span>
+		        <span class="sr-only">Previous</span>
 
-		{% else %}
+	     	</a>
 
-			...
+	  	{% endif %}
+	    
 
-		{% endif %}
+	    {% for page in posts.iter_pages() %}
+		          
+			{% if page %}
 
-	{% endfor %}
+				<!-- <a href="{{ url_for('index', page = page )}}"> {{ page }} </a> -->
+
+				 <li class="page-item"><a class="page-link" href="{{ url_for('admin', page = page )}}"> {{ page }} </a> </li>
+
+			{% else %}
+
+				...
+
+			{% endif %}
+
+		{% endfor %}
+
+		{% if posts.has_next %}
+
+	  		<a class="page-link" href="{{ url_for('admin', page = posts.next_num )}}" aria-label="Next">
+
+		        <span aria-hidden="true">&raquo;</span>
+		        <span class="sr-only">Next</span>
+
+	     	</a>
+
+	  	{% endif %}
+
+	  </ul>
+	</nav>
 
 
 
