--- a/templates/blog/category_wise_blog.html
+++ b/templates/blog/category_wise_blog.html
@@ -5,45 +5,90 @@
 	
 	<h1> {{ category }} </h1><hr>
 
-	{% for post in posts.items %}
+	
 
-		{% if post.is_live %}
+	 {% for post in posts.items %}
 
-		<h3> <a href="{{ url_for('article', slug = post.slug) }}"> {{ post.title }} </a> </h3> 
+	 	{% if post.is_live %}
 
-		<strong> Posted by {{ post.author.name }} in {{ post.category.name }} on 
+	 		<article class="media content-section">
 
-			{% if post.publish_date %}
+	          <div class="media-body">
 
-				{{ post.publish_date }} 
+	            <div class="article-metadata">
+
+	              Posted by 
+	              <a class="mr-2" href="{{ url_for('author_wise_posts', author = post.author.name) }}">{{ post.author.name }}</a>
+	              in  {{ post.category.name }} on
+
+	              <small class="text-muted">{{ post.publish_date }}</small>
+
+	            </div>
+
+	            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+
+	            <p class="article-content"> {{ post.body }} </p>
+
+	          </div>
+
+	        </article>
+
+	 	{% endif  %}
+
+        
+
+    {% endfor %}
+
+
+	
+
+	<!-- Pagination -->
+	<nav aria-label="Page navigation example">
+
+	  <ul class="pagination">
+
+
+	  	{% if posts.has_prev %}
+
+	  		<a class="page-link" href="{{ url_for('category_wise_blog', category = category ,page = posts.prev_num)}}" aria-label="Previous">
+
+		        <span aria-hidden="true">&laquo;</span>
+		        <span class="sr-only">Previous</span>
+
+	     	</a>
+
+	  	{% endif %}
+	    
+
+	    {% for page in posts.iter_pages() %}
+		          
+			{% if page %}
+
+				<!-- <a href="{{ url_for('index', page = page )}}"> {{ page }} </a> -->
+
+				 <li class="page-item"><a class="page-link" href="{{ url_for('category_wise_blog', category = category ,page = page)}}"> {{ page }} </a> </li>
+
+			{% else %}
+
+				...
 
 			{% endif %}
 
+		{% endfor %}
 
-		</strong> 
+		{% if posts.has_next %}
 
-		<hr>
+	  		<a class="page-link" href="{{ url_for('category_wise_blog', category = category ,page = posts.next_num)}}" aria-label="Next">
 
-		{% endif %}
+		        <span aria-hidden="true">&raquo;</span>
+		        <span class="sr-only">Next</span>
 
-	{% endfor %}
+	     	</a>
 
+	  	{% endif %}
 
-	{% for page in posts.iter_pages() %}
-
-
-		{% if page %}
-
-			<a href="{{ url_for('category_wise_blog', category = category ,page = page)}}"> {{ page }} </a>
-
-		{% else %}
-
-			...
-
-		{% endif %}
-
-
-	{% endfor %}
+	  </ul>
+	</nav>
 
 
 {% endblock %}
