FLASK BLOG UI IMPROVED, Ready to be deployed

--- a/templates/author/login.html
+++ b/templates/author/login.html
@@ -23,7 +23,7 @@
 
 		  <br>
 
-		  <input class="btn btn-primary" type="submit" value="Login">
+		  <input class="btn btn-primary" type="submit" value="Login"> <br><br><br>
 
 		</form> 
  		
