--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,50 +8,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     <title> {% block title %} Flask Blog  {% endblock %} </title>
+
+    <link type="text/javascript" src="{{ url_for('static', filename = 'js/scripts.js') }}" > </link>
+
+     <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+
+
 
 </head>
 
 <body>
 
-    <header class="site-header">
-
-      <!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-
-        <div class="container-fluid">
-
-          <a class="navbar-brand mr-4" href="/"> Flask Blog </a>
-
-          {% if session['user'] %}
-
-            <form class="form-inline my-2 my-lg-0">
-
-             
-               <a class="navbar-brand mr-3 "  href="{{ url_for('admin') }}"> {{ session['user']}} </a>
-
-               <a class="navbar-brand mr-3" href="{{ url_for('post') }}">Create</a>
-
-               <a class="navbar-brand mr-3" href="{{ url_for('logout') }}">Logout</a>
-            </form>
-
-          {% else %}
-
-           <form class="form-inline my-2 my-lg-0">
-
-              <a class="navbar-brand mr-3" href="{{ url_for('login') }}">Login</a>
-              <a class="navbar-brand mr-3" href="{{ url_for('setup') }}">SignUp</a>
-           </form>
-
-          {% endif %}
-
-        </div>
-
-      </nav> -->
-    </header>
-
-     <nav class="navbar navbar-expand-sm  navbar-dark bg-dark " >
+  
+     <nav class="navbar navbar-expand-sm  navbar-dark bg-dark" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -70,7 +48,7 @@
            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="{{ url_for('contact_us')}}">Contact Us</a>
           </li>
           
           
@@ -170,9 +148,50 @@
     </main>
 
 
+    <br><br>
+     <!-- Footer-->
 
 
 
+        <footer class="footer text-center">
+            <div class="container">
+                <div class="row">
+                    <!-- Footer Location-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4 h5">Location</h4>
+                        <p class="mb-0">
+                            2215 John Daniel Drive
+                            <br />
+                            Toronto, ON
+                        </p>
+                    </div>
+                    <!-- Footer Social Icons-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4 h5 ">Around the Web</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                    </div>
+                    <!-- Footer About Text-->
+                    <div class="col-lg-4">
+                        <h4 class="text-uppercase mb-4 h5">About Flask Blog</h4>
+                        <p class="mb-0">
+                            Flask Blog is CRUD web application made using Python-Flask framework by Harinder Singh
+                            
+                            .
+                        </p>
+                    </div>
+                </div>
+            </div>
+          </footer>
+
+
+
+        <!-- Copyright Section-->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright © www.flasknotes.com 2020</small></div>
+        </div>
 
    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -180,6 +199,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
 </body>
 
