Contact Us Donegit status

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -12,7 +12,10 @@
 		<div class="col-6">
 
 				<br>
-				<H3>Contact Form</H3><p>
+
+				<H3>Message Us</H3><p>
+
+				<p>Have a question? Feel free to contact us with any questions, comments or concerns you may have. We’ll get back to you right away. </p>
 
 			    {{ form.hidden_tag() }}
 
@@ -29,6 +32,8 @@
 
 					  <input class="btn btn-primary" type="submit" value="Send">
 					 <br>
+				<br>	 
+				<p> Click “send” once and wait for the magic to happen. </p>
 
 				</form> 
 
