--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,11 +10,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+  <!--   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"> -->
 
     <title> {% block title %} Flask Blog  {% endblock %} </title>
 
-   <!--  <link type="text/javascript" src="{{ url_for('static', filename = 'js/scripts.js') }}" > </link> -->
 
      <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
