--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,3 @@
-
-
-
 <html lang="en">
 <head>
   <title>Navbar</title>
@@ -72,17 +69,17 @@
 
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href=" {{ url_for('index')}} ">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="{{ url_for('about') }}">About</a>
             </li>
             <li class="nav-item dropdown dmenu">
            
            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="{{ url_for('contact_us')}} ">Contact Us</a>
           </li>
           
           
@@ -93,10 +90,10 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="{{ url_for('setup') }}">Sign Up</a>
               </li>
            
            </ul>
