--- a/templates/home.html
+++ b/templates/home.html
@@ -21,16 +21,16 @@
             margin-right: 20px;
         }
 
-        .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #2c3e50;
-  color: #fff;
-}
-
-.copyright {
-  background-color: #1a252f;
-}
+        footer {
+          text-align: center;
+          padding: 3px;
+          background-color: #333936;
+          color: white;
+          position: absolute;
+          width: 100%;
+          bottom: 10px;
+          
+        }
 
         nav{
 
