--- a/templates/layout.html
+++ b/templates/layout.html
@@ -109,7 +109,7 @@
         </div>
 
 
-        <!-- {% if session['user'] %}
+        {% if session['user'] %}
 
 
           <div class="col-md-2">
@@ -137,7 +137,7 @@
         {% else %}
 
 
-        {% endif %} -->
+        {% endif %}
 
       </div>
 
