Don't have an account done

--- a/templates/author/login.html
+++ b/templates/author/login.html
@@ -26,6 +26,8 @@
 		  <input class="btn btn-primary" type="submit" value="Login"> <br><br><br>
 
 		</form> 
+
+		<a href="{{ url_for('setup') }}"> Don't have an account? </a>
  		
 
  	</div>
